--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
           </main>
 
-          <!-- <footer class="footer">
+          <footer class="footer">
             <div class="footer-container">
                 <div class="footer-content">
               
@@ -101,7 +101,7 @@
                     </div>
                   </div>
             </div>
-      </footer> -->
+        </footer>
     <!-- </div> -->
 </body>
 </html>
