--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
             </div>
               <h2 id="title">Ningún mensaje fue encontrado</h2>
               <textarea name="" id="" cols="30" rows="5" readonly>Ingresa el texto que desees encriptar o desencriptar.</textarea>
-              <div class="buttons copyButton">
-                  <button class="hide" id="copyButton" onclick="updateClipboard()">Copiar</button>
-              </div>
           </div>
           <div id="container-result" class="erase">
             <textarea name="" id="resuilt" class="result" cols="30" rows="10" readonly></textarea>
+            <div class="buttons">
+              <button class="hide" id="copyButton" onclick="updateClipboard()">Copiar</button>
+            </div>
           </div>
       </article>
 
