--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Encriptador</title>
-    <link rel="icon" type="image/png" href="assets/Logo.png">
+    <link rel="icon" type="image/svg" href="assets/Logo.svg">
 
 </head>
 <body>
-  
-  <img class="logo" src="assets/Logo.png" alt="">
+
+  <img class="logo" src="assets/Logo.svg" alt="">
 
   <main class="parent">
       <article class="left">
-          <div class="container">
+          <div class="container-result">
               <textarea class="text" name="" id="text" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
-              <div>
+              <div class="warning">
                   <span>
-                    <img src="assets/exclamation.svg" alt="" id="img">
+                    <img src="assets/exclamation.svg" width="25" height="25" alt="exclamation" id="img">
                       Solo letras minúsculas y sin acentos
                   </span>
               </div>
@@ -78,8 +78,9 @@
             </div>
       </div>
   </footer>
+  
 </body>
 </html>
 
-<script src="events.js"></script>
-<script src="animation.js"></script>
+<script src="js/events.js"></script>
+<script src="js/animation.js"></script>
